--- a/index3.html
+++ b/index3.html
@@ -1,33 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="css/styl.css">
+    <---Designed by Abhay---->
+  <meta charset="UTF-8">
+  <title>Avy - Currency Converter</title>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css'>
+<link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&amp;display=swap'><link rel="stylesheet" href="./currency.css">
+
 </head>
 <body>
-    <div class="container">
-        <h1>Currency Converter</h1>
-        <div class="row">
-            <div class="col">
-                <select class="Currency">
-                    <option >Select</option>
-                </select>
-                <input type="text" id="input_currency" disabled name="">
-            </div>
-            <div class="col">
-                <select class="Currency">
-                    <option >Select</option>
-                </select>
-                <input type="text" id="output_currency" name="">
-            </div>
-        </div>
-        <button onClick=" 
-        convert()">Convert</button>
+<!-- partial:index.partial.html -->
+<div class="wrapper">
+  <header>&#391;urrency &#391;onverter</header>
+  <form action="#">
+    <div class="amount">
+      <p>&#398;nter &#8704;mount</p>
+      <input type="text" value="1">
     </div>
+    <div class="drop-list">
+      <div class="from">
+        <p>From</p>
+        <div class="select-box">
+          <img src="https://flagcdn.com/48x36/us.png" alt="flag">
+          <select>
+            <!-- Options tag are inserted from JavaScript -->
+          </select>
+        </div>
+      </div>
+      <div class="icon"><i class="fas fa-exchange-alt"></i></div>
+      <div class="to">
+        <p>To</p>
+        <div class="select-box">
+          <img src="https://flagcdn.com/48x36/in.png" alt="flag">
+          <select>
+            <!-- Options tag are inserted from JavaScript -->
+          </select>
+        </div>
+      </div>
+    </div>
+    <div class="exchange-rate">Getting &#398;xchange rate...</div>
+    <button>Get &#398;xchange Rate</button>
+  </form>
+</div>
 
-    <script type= "text/javascript" src="js/script.js"></script>
-    
+<!-- partial -->
+  <script  src="./script.js"></script>
+
 </body>
 </html>
